# quiche

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  __quiche_run  bootstrap.py  build_log.txt  check_output.txt  debug_diff.py  exp.q  exp1.rs  generated_functional.rs  host_functional.rs  out.txt  output.rs  qt.qrs  stderr.txt  vector_test.ers  vector_test.rs  verify.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  templates.rs
crates/cli/tests/: runner.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: dict.rs  expr.rs  lib.rs  list.rs  stmt.rs  types.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: dict.rs  expr.rs  lib.rs  list.rs  stmt.rs  types.rs
crates/metaquiche-host/: Cargo.toml
crates/metaquiche-host/src/: expr.rs  lib.rs  main.rs  stmt.rs  templates.rs  types.rs
crates/metaquiche-host/tests/: integration_main.rs  type_annotations.rs
crates/metaquiche-native/: Cargo.toml  build.rs
crates/metaquiche-native/src/: lib.rs  main.qrs  main.rs
crates/metaquiche-native/src/compiler/: codegen.qrs  extern_defs.qrs  mod.qrs  mod.rs  type_utils.qrs
crates/metaquiche-native/src/compiler/codegen/: expr.qrs  state.qrs
crates/metaquiche-shared/: Cargo.toml  templates.toml
crates/metaquiche-shared/locales/: en-US.toml
crates/metaquiche-shared/src/: error_exit.rs  i18n.rs  lib.rs  runner.rs  telemetry.rs  template.rs  (+1 more)
crates/parsify/: build.rs
crates/parsley-qrs/: Cargo.toml  Quiche.toml  build.rs
crates/parsley_qrs/: Cargo.toml  Quiche.toml
crates/perceus-mem/: Cargo.toml
crates/perceus-mem/src/: handle.rs  inline.rs  lib.rs  managed.rs  policy.rs  region.rs
crates/perceus-mem/tests/: advanced_patterns.rs
crates/quiche-compiler/: Cargo.toml
crates/quiche-host/: Cargo.toml
crates/quiche-parser/: Cargo.toml
crates/quiche-parser/src/: ast.rs  error_fmt.rs  lexer.rs  lib.rs  parser.rs
crates/quiche-runtime/: Cargo.toml  build.rs
crates/quiche-self/: Cargo.toml  Quiche.toml  build.rs
crates/quiche-self/src/: ast.qrs  compiler.qrs  main.qrs  main.rs  types.qrs
crates/quiche-self/src/compiler/: codegen.qrs  extern_defs.qrs  mod.qrs  type_utils.qrs  usage_analyzer.qrs
crates/quiche-self/src/compiler/codegen/: expr.qrs  state.qrs  stmt.qrs
crates/quiche-self/tests/: runner.rs
crates/quiche-to-metaquiche/: Cargo.toml
crates/runtime/: Cargo.toml
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  building.md  compiler_architecture.md  compiler_guidelines.md  design.md  elevate_architecture.md  features.md  feedback-for-elevate.md  handoff_template_unification.md  jj-guide.md  memory_management_exploration.md  quiche-problems.md  quiche_self_hosting_handoff.md  self_hosting.md  self_hosting_roadmap.md  selfhosting_handoff.md  stage1_ast_fixes_handoff.md  status.md  threading_proposal.md  why-quiche.md
docs/inout/: perceus-metaquiche-issues.md
docs/input/: pathlib-codegen-path-mismatch.md  qtest-scripts-cannot-import-runtime.md
docs/language_design/: 01_overview.md  02_types.md  03_control_flow.md  04_meta_quiche.md  05_pythonic.md  06_constants.md  07_rust_interop.md  99_ideas.md  codegen_blockers.md
docs/testing/: metaquiche.md  quiche.md
examples/: README.md  args_test.qrs  arithmetic.qrs  comp_test.q  control_flow.qrs  factorial.qrs  fstring_test.qrs  hashmap_test.qrs  hello.q  hello_typed.q  import_test.qrs  lambda_test.qrs  list_dict_test.qrs  match_test.qrs  option_test.qrs  pythonic_test.qrs  struct_methods.q  struct_test.qrs  tuple_test.qrs  type_demo.q  types_test.qrs
examples/scripts/: demo.q  implicit_traits.q  simple.q  sudoku  sudoku.q  sudoku.qrs  sudoku_clean.qrs  test.qrs  traits.q
legacy/metaquiche/quiche-host/: Cargo.toml
legacy/metaquiche/quiche-host/src/: main.rs
legacy/metaquiche/quiche-host/tests/: type_annotations.rs
lib/: Cargo.toml  qtest.q  test.qrs
lib/src/: dict.rs  enum_module.rs  file_module.rs  lib.rs  list.rs  path_module.rs  quiche_type.rs  str_type.rs  system_module.rs
metaquiche/metaquiche-host/: Cargo.toml
metaquiche/metaquiche-host/src/: lib.rs  main.rs  stmt.rs
metaquiche/metaquiche-native/: Cargo.toml  build.rs
metaquiche/metaquiche-native/src/: error_handling.qrs  lib.rs  main.qrs  main.rs
metaquiche/metaquiche-native/src/compiler/: codegen.qrs  type_utils.qrs
metaquiche/parsley/: Cargo.toml  Quiche.toml  build.rs
metaquiche/parsley-qrs/: Cargo.toml
metaquiche/quiche-runtime/: Cargo.toml
project_gamma/src/: main.qrs
quiche/: Cargo.toml
quiche/perceus-mem/src/: lib.rs  store.rs
quiche/perceus-mem/tests/: comprehensive.rs
quiche/quiche-bridge/: Cargo.toml
quiche/quiche-bridge/src/: desugar.rs
quiche/quiche-compiler/: Cargo.toml
quiche/quiche-compiler/src/: desugar.rs  lib.rs
quiche/quiche-compiler/tests/: runner.rs
quiche/quiche-elevate-bridge/: Cargo.toml
quiche/quiche-elevate-bridge/src/: desugar.rs  lib.rs
quiche/quiche-runtime/: Cargo.toml  build.rs
quiche/quiche-runtime/src/: builtins.qrs  introspect.qrs  lib.rs
quiche/src/: lexer.rs  lib.rs  main.rs  parser.rs
quiche/src/templates/: init_build.rs  init_main.q
quiche/tests/: lib_resolution_regression.rs
quiche_runtime/: Cargo.toml  Quiche.toml
quiche_runtime/src/: lib.qrs  lib.rs
skills/: quiche-compiler-extension.md
src/: lib.rs  main.rs
tests/: qtest_runner.qrs  runner.qrs  runner_utils.rs  test_args.qrs  test_borrow.q  test_codegen_scope_regression.q  test_comprehensions.q  test_control_flow.q  test_control_flow.qrs  test_cow_iterator.q  test_cow_iterator.qrs  test_dict.q  test_dict.qrs  test_dict_ops.q  test_elevate_issues.q  test_exceptions.qrs  test_fstring.q  test_fstring.qrs  test_functional.q  test_functional.qrs  test_interop.qrs  test_len.q  test_len_comparison_coercion.q  test_lifecycle.q  test_lifecycle.qrs  test_list.q  test_memory.q  test_memory.qrs  test_multiline_simple.q  test_multiline_simple.qrs  test_multiline_string.q  test_multiline_string.qrs  test_param_scope.q  test_param_scope.qrs  test_pipe.q  test_private_visibility.q  test_private_visibility.qrs  test_quiche.q  test_quiche.qrs  test_range.q  (+16 more)
(+66 files in other folders)
