[workspace]
members = [
    "crates/quiche-parser",
    "crates/metaquiche-host",
    "crates/metaquiche-shared",
    "crates/metaquiche-native",
    "crates/quiche-runtime",
    "crates/parsley-qrs",
    "crates/perceus-mem",
]
resolver = "2"

# Workspace dependencies
[workspace.dependencies]
# (empty - no shared workspace deps)

# Workspace-wide lint configuration
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
