[workspace]
members = [
    "metaquiche/metaquiche-parser",
    "metaquiche/metaquiche-host",
    "metaquiche/metaquiche-shared",
    "metaquiche/metaquiche-native",
    "metaquiche/quiche-runtime",
    "metaquiche/parsley-qrs",
    "metaquiche/perceus-mem",
]
resolver = "2"

# Workspace dependencies
[workspace.dependencies]
# (empty - no shared workspace deps)

# Workspace-wide lint configuration
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
