[workspace]
members = [
    "metaquiche/metaquiche-parser",
    "metaquiche/metaquiche-host",
    "metaquiche/metaquiche-shared",
    "metaquiche/metaquiche-native",
    "quiche/quiche-compiler",
    "quiche/quiche-runtime",
    "quiche/parsley",
    "quiche/perceus-mem",
]
resolver = "2"

# Workspace dependencies
[workspace.dependencies]
# (empty - no shared workspace deps)

# Workspace-wide lint configuration
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
