[package]
name = "quiche"
version = "0.7.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
#elevate = { git = "https://github.com/quichelang/elevate.git", tag = "v0.9.2" }
elevate = { path = "../../elevate" }
thiserror = "2.0"
regex = "1"

[[bin]]
name = "quiche"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
