[package]
name = "metaquiche-host"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
quiche-parser = { path = "../quiche-parser" }
metaquiche-shared = { path = "../metaquiche-shared" }
regex = "1.5"
[lib]
path = "src/lib.rs"

[[bin]]
name = "metaquiche-host"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
