[package]
name = "metaquiche-native"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
# quiche_compiler removed

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff" }
quiche-runtime = { path = "../quiche-runtime" }
quiche-parser = { path = "../quiche-parser" }
metaquiche-shared = { path = "../metaquiche-shared" }
parsley-qrs = { path = "../parsley-qrs" }

[[bin]]
name = "metaquiche-native"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"

[features]
bootstrap = []
