[package]
name = "perceus-mem"
version = "0.1.0"
edition = "2021"
description = "Memory management with generation-based reference counting and regions"
license = "MIT"

[dependencies]
qcell = "0.5"  # Compile-time checked interior mutability (no panics)

[features]
default = []
thread-safe = []  # Toggles AtomicPolicy: Rc+QCell vs Arc+QCell+Mutex

[dev-dependencies]
# For testing
