[package]
name = "quiche-parser"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
metaquiche-shared = { path = "../metaquiche-shared" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff" }
thiserror = "2.0"
