[package]
name = "quiche_self"
version = "0.1.0"
edition = "2024"

# Break out of any parent workspace
[workspace]

[build-dependencies]
quiche_compiler = { path = "/Users/jagtesh/.gemini/antigravity/playground/exo-kuiper/quiche/crates/compiler" }

[dependencies]
rustpython-parser = "0.4.0"

[[bin]]
name = "quiche_self"
path = "src/main.rs"
