[package]
name = "quiche_self"
version = "0.1.0"
edition = "2024"



[build-dependencies]
# quiche_compiler removed

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff" }
quiche_runtime = { path = "../runtime" }
parsley-qrs = { path = "../parsley-qrs" }

[[bin]]
name = "quiche_self"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"

[features]
bootstrap = []
