[package]
name = "metaquiche-host"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
metaquiche-parser = { path = "../metaquiche-parser" }
metaquiche-shared = { path = "../metaquiche-shared" }
regex = "1.5"
[lib]
path = "src/lib.rs"

[[bin]]
name = "mq0"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
