[package]
name = "metaquiche-native"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
# quiche_compiler removed

[dependencies]
quiche-runtime = { path = "../../quiche/quiche-runtime" }
metaquiche-parser = { path = "../metaquiche-parser" }
metaquiche-shared = { path = "../metaquiche-shared" }
metaquiche-host = { path = "../metaquiche-host" }
parsley = { path = "../../quiche/parsley" }

[lib]
name = "metaquiche_native"
path = "src/lib.rs"

[[bin]]
name = "mq"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"

[features]
bootstrap = []
