[package]
name = "quiche-compiler"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
# quiche_compiler removed

[dependencies]
quiche-runtime = { path = "../quiche-runtime" }
metaquiche-parser = { path = "../../metaquiche/metaquiche-parser" }
metaquiche-shared = { path = "../../metaquiche/metaquiche-shared" }
metaquiche-host = { path = "../../metaquiche/metaquiche-host" }
parsley = { path = "../parsley" }

[lib]
name = "quiche_compiler"
path = "src/lib.rs"

[[bin]]
name = "mq"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"

[features]
bootstrap = []
