[package]
name = "quiche-runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
metaquiche-shared = { path = "../../metaquiche/metaquiche-shared" }
metaquiche-parser = { path = "../../metaquiche/metaquiche-parser" }
perceus-mem = { path = "../perceus-mem" }
regex = "1"
